--- a/Web.config
+++ b/Web.config
@@ -2,6 +2,7 @@
    <system.webServer>
       <staticContent>
          <mimeMap fileExtension=".svg" mimeType="image/svg+xml" />
+         <mimeMap fileExtension=".webm" mimeType="video/webm" />
       </staticContent>
    </system.webServer>
 </configuration>
