--- a/Web.config
+++ b/Web.config
@@ -4,5 +4,11 @@
          <mimeMap fileExtension=".svg" mimeType="image/svg+xml" />
          <mimeMap fileExtension=".webm" mimeType="video/webm" />
       </staticContent>
+      <defaultDocument>
+         <files>
+            <clear />
+            <add value="/index.html" />
+         </files>
+      </defaultDocument>
    </system.webServer>
 </configuration>
