--- a/Web.config
+++ b/Web.config
@@ -4,4 +4,5 @@
          <mimeMap fileExtension=".svg" mimeType="image/svg+xml" />
          <mimeMap fileExtension=".webm" mimeType="video/webm" />
       </staticContent>
+      </system.webServer>
 </configuration>
