--- a/Web.config
+++ b/Web.config
@@ -4,5 +4,13 @@
          <mimeMap fileExtension=".svg" mimeType="image/svg+xml" />
          <mimeMap fileExtension=".webm" mimeType="video/webm" />
       </staticContent>
-      </system.webServer>
+   </system.webServer>
+   <rewrite>
+      <rules>
+         <rule name="Rewrite to index">
+            <match url="^[^\\.]*$" />
+            <action type="Rewrite" url="/index.html [L]" />
+         </rule>
+      </rules>
+   </rewrite>
 </configuration>
