--- a/Web.config
+++ b/Web.config
@@ -1,16 +1,16 @@
 ﻿<configuration>
    <system.webServer>
+      <rewrite>
+         <rules>
+            <rule name="ProductList">
+               <match url="/myProfile" />
+               <action type="Redirect" url="/" />
+            </rule>
+         </rules>
+      </rewrite>
       <staticContent>
          <mimeMap fileExtension=".svg" mimeType="image/svg+xml" />
          <mimeMap fileExtension=".webm" mimeType="video/webm" />
       </staticContent>
-      <rewrite>
-         <rules>
-            <rule name="Rewrite to index">
-               <match url="^[^\\.]*$" />
-               <action type="Rewrite" url="/index.html [L]" />
-            </rule>
-         </rules>
-      </rewrite>
    </system.webServer>
 </configuration>
