--- a/Web.config
+++ b/Web.config
@@ -3,8 +3,8 @@
       <rewrite>
          <rules>
             <rule name="ProductList">
-               <match url="(.*)" />
-               <action type="Redirect" url="https://www.google.com.bd/" />
+               <match url="(^[^\\.]*$ /index.html [L])" />
+               <action type="Redirect" url="/" />
             </rule>
          </rules>
       </rewrite>
