--- a/Web.config
+++ b/Web.config
@@ -2,9 +2,9 @@
    <system.webServer>
       <rewrite>
          <rules>
-            <rule name="ProductList">
-               <match url="(^[^\\.]*$ /index.html [L])" />
-               <action type="Redirect" url="/" />
+            <rule name="ksw">
+               <match url="./myProfile" />
+               <action type="Redirect" url="/index.html" />
             </rule>
          </rules>
       </rewrite>
