--- a/Web.config
+++ b/Web.config
@@ -3,7 +3,7 @@
       <rewrite>
          <rules>
             <rule name="ksw">
-               <match url="./myProfile" />
+               <match url="(.*)" />
                <action type="Redirect" url="/index.html" />
             </rule>
          </rules>
