--- a/Web.config
+++ b/Web.config
@@ -4,7 +4,7 @@
          <rules>
             <rule name="ksw">
                <match url="(.*)" />
-               <action type="Redirect" url="/index.html" />
+               <action type="Redirect" url="http://kswdemo.azurewebsites.net" />
             </rule>
          </rules>
       </rewrite>
