--- a/Web.config
+++ b/Web.config
@@ -3,8 +3,8 @@
       <rewrite>
          <rules>
             <rule name="ksw">
-               <match url="(.*)" />
-               <action type="Redirect" url="http://kswdemo.azurewebsites.net" />
+               <match url="(./myProfile)" />
+               <action type="Redirect" url="/" />
             </rule>
          </rules>
       </rewrite>
